aos animation overflow glitch fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,104 +1,8 @@
 
-html, body{
-/* overflow-x: hidden; */
-/* height: 100vh; */
-}
-
-/* .toastjs-container {
-	position: absolute; 
-	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	width: calc(100% - 60px);
-	max-width: 400px;
-
-	transform: translateX(-400%);
-	transition: transform 1s;
-
-	z-index: 100; 
-}
-
-.toastjs-container[aria-hidden="false"] {
-	transform: translateX(0%);
-}
-
-.toastjs {
-	background: #fff;
-	padding: 10px 15px 0; 
-	border-left-style: solid;
-	border-left-width: 5px;
-	border-radius: 4px;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-}
-
-.toastjs.default {
-	border-left-color: #AAAAAA;
-}
-
-.toastjs.success {
-	border-left-color: #2ECC40;
-}
-.toastjs.warning {
-	border-left-color: #FF851B;
-}
-.toastjs.danger {
-	border-left-color: #FF4136;
-}
-
-
-.toastjs-btn {
-	background: rgb(240,240,240);
-	padding: 5px 10px;
-	border: 0;
-	border-radius: 4px;
-
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 14px;
-
-	display: inline-block;
-	margin-right: 10px;
-	margin-bottom: 10px;
-	cursor: pointer;
-}
-
-.toastjs-btn--custom {
-	background: rgb(50,50,50);
-	color: #fff;
-}
-
-
-
-.toastjs-btn:hover,
-.toastjs-btn:focus {
-	outline: none;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
-}
-
-.bottom-nav{
-box-shadow: 1px 6px 10px rgb(46, 46, 46)
-}
-
-
-.info {
-	overflow: hidden;
-	transition: all .5s ease-in-out;
-	line-height: 0;
-	padding: 0 1em;
-  }
-   
-  .info:target {
-	line-height: 1.5;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	color: black;
-  } */
 .main-container{
 display: flex;
 flex-flow: column;
 }
-
-
-
 
 
 @tailwind base;
